--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Time is going!</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style = "background-color: #F59AA3">
         <div class = "header">
             <table>
                 <tr>
@@ -17,6 +17,23 @@
             </table>
         </div>
             
+        <div class = "main">
+            <table>
+                <caption>Name of project</caption>
+                <tr>
+                    <td>First step in the project</td>
+                    <td>Small description</td>
+                    <td>Timeline</td>
+                    <td>Summary of productivity</td>
+                </tr>
+                <tr>
+                    <td>Second step in the project</td>
+                    <td>Small description</td>
+                    <td>Timeline</td>
+                    <td>Summary of productivity</td>
+                </tr>
+            </table>
+        </div>
         <div  class = "information">
             <table class = "information information-table">
                 <caption>Bla-bla-bla</caption>
@@ -40,4 +57,3 @@
 
     </body>
 </html>
-b
