--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
         </div>
             
         <div class = "main">
-            <table>
-                <caption>Name of project</caption>
-                <tr>
-                    <td>First step  in the project</td>
-                    <td>Small description</td>
-                    <td>Timeline</td>
-                    <td>Summary of productivity</td>
-                </tr>
-                <tr>
-                    <td>Second step in the project</td>
-                    <td>Small description</td>
-                    <td>Timeline</td>
-                    <td>Summary of productivity</td>
-                </tr>
-            </table>
+            <div class = "table">
+                <table>
+                    <caption>Name of project</caption>
+                    <tr>
+                        <td>First step  in the project</td>
+                        <td>Small  description</td>
+                        <td>Timeline</td>
+                        <td>Summary of productivity</td>
+                    </tr>
+                    <tr>
+                        <td>Second step in the project</td>
+                        <td>Small description</td>
+                        <td>Timeline</td>
+                        <td>Summary of productivity</td>
+                    </tr>
+                </table> 
+            </div>
         </div>
         <div  class = "information">
             <table class = "information information-table">
