--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
                         <td>Timeline</td>
                         <td>Summary of productivity</td>
                     </tr>
+                    <tr>
+                        <td>Third step in the project</td>
+                        <td>Small description</td>
+                        <td>Timeline</td>
+                        <td>Summary of productivity</td>
+                    </tr>
+                    <tr>
+                        <td>Forth step in the project</td>
+                        <td>Small description</td>
+                        <td>Timeline</td>
+                        <td>Summary of productivity</td>
+                    </tr>
+                    <tr>
+                        <td>Fifth step in the project</td>
+                        <td>Small description</td>
+                        <td>Timeline</td>
+                        <td>Summary of productivity</td>
+                    </tr>
                 </table> 
             </div>
         </div>
