--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style = "background-color: #F59AA3">
-        <div class = "header">
+        <header>
             <table>
                 <tr>
                     <td style = "width: 5%">Personal information</td>
@@ -15,10 +15,10 @@
                     <td style = "width: 5%">Additional</td>
                 </tr>
             </table>
-        </div>
+        </header>
             
         <div class = "main">
-            <div class = "table">
+            <nav class = "table">
                 <table>
                     <caption>Name of project</caption>
                     <tr>
@@ -52,7 +52,7 @@
                         <td>Summary of productivity</td>
                     </tr>
                 </table> 
-            </div>
+            </nav>
         </div>
         <div  class = "information">
             <table class = "information information-table">
