--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </table>
         </header>
             
-        <div class = "main">
+        <main>
             <nav class = "table">
                 <table>
                     <caption>Name of project</caption>
@@ -53,7 +53,7 @@
                     </tr>
                 </table> 
             </nav>
-        </div>
+        </main>
         <div  class = "information">
             <table class = "information information-table">
                 <caption>Bla-bla-bla</caption>
