--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </table> 
             </nav>
         </main>
-        <div  class = "information">
+        <aside  class = "information">
             <table class = "information information-table">
                 <caption>Bla-bla-bla</caption>
                 <tr>
@@ -73,7 +73,7 @@
                     <td>Information</td>
                 </tr>
             </table>
-        </div>
+        </aside>
 
     </body>
 </html>
