--- a/index.html
+++ b/index.html
@@ -1,79 +1,78 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Time is going!</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="basic.css">
     </head>
-    <body style = "background-color: #F59AA3">
-        <header>
-            <table>
-                <tr>
-                    <td style = "width: 5%">Personal information</td>
-                    <td style = "width: 5%">Additional informaton</td>
-                    <td style = "width: 65%; text-align: center">Name of site</td>
-                    <td style = "width: 5%">Additional</td>
-                </tr>
-            </table>
-        </header>
-            
-        <main>
-            <nav class = "table">
-                <table>
-                    <caption>Name of project</caption>
-                    <tr>
-                        <td>First step  in the project</td>
-                        <td>Small  description</td>
-                        <td>Timeline</td>
-                        <td>Summary of productivity</td>
-                    </tr>
-                    <tr>
-                        <td>Second step in the project</td>
-                        <td>Small description</td>
-                        <td>Timeline</td>
-                        <td>Summary of productivity</td>
-                    </tr>
-                    <tr>
-                        <td>Third step in the project</td>
-                        <td>Small description</td>
-                        <td>Timeline</td>
-                        <td>Summary of productivity</td>
-                    </tr>
-                    <tr>
-                        <td>Forth step in the project</td>
-                        <td>Small description</td>
-                        <td>Timeline</td>
-                        <td>Summary of productivity</td>
-                    </tr>
-                    <tr>
-                        <td>Fifth step in the project</td>
-                        <td>Small description</td>
-                        <td>Timeline</td>
-                        <td>Summary of productivity</td>
-                    </tr>
-                </table> 
-            </nav>
-        </main>
-        <aside  class = "information">
-            <table class = "information information-table">
-                <caption>Bla-bla-bla</caption>
-                <tr>
-                    <td>Information</td>
-                </tr>
-                <tr>
-                    <td>Information</td>
-                </tr>
-                <tr>
-                    <td>Information</td>
-                </tr>
-                <tr>
-                    <td>Information</td>
-                </tr>
-                <tr>
-                    <td>Information</td>
-                </tr>
-            </table>
-        </aside>
-
+    <body>
+        <div class="container">
+            <div class="header">
+                    <table>
+                            <tr>
+                                <td style = "width: 5%">Personal information</td>
+                                <td style = "width: 5%">Additional informaton</td>
+                                <td style = "width: 65%; text-align: center">Name of site</td>
+                                <td style = "width: 5%">Additional</td>
+                            </tr>
+                        </table>
+            </div>
+            <div class="menu">
+                    <table class = "information information-table">
+                            <caption>Bla-bla-bla</caption>
+                            <tr>
+                                <td>Information</td>
+                            </tr>
+                            <tr>
+                                <td>Information</td>
+                            </tr>
+                            <tr>
+                                <td>Information</td>
+                            </tr>
+                            <tr>
+                                <td>Information</td>
+                            </tr>
+                            <tr>
+                                <td>Information</td>
+                            </tr>
+                        </table>
+            </div>
+            <div class="content">
+                    <nav class = "table">
+                            <table>
+                                <caption>Name of project</caption>
+                                <tr>
+                                    <td>First step  in the project</td>
+                                    <td>Small  description</td>
+                                    <td>Timeline</td>
+                                    <td>Summary of productivity</td>
+                                </tr>
+                                <tr>
+                                    <td>Second step in the project</td>
+                                    <td>Small description</td>
+                                    <td>Timeline</td>
+                                    <td>Summary of productivity</td>
+                                </tr>
+                                <tr>
+                                    <td>Third step in the project</td>
+                                    <td>Small description</td>
+                                    <td>Timeline</td>
+                                    <td>Summary of productivity</td>
+                                </tr>
+                                <tr>
+                                    <td>Forth step in the project</td>
+                                    <td>Small description</td>
+                                    <td>Timeline</td>
+                                    <td>Summary of productivity</td>
+                                </tr>
+                                <tr>
+                                    <td>Fifth step in the project</td>
+                                    <td>Small description</td>
+                                    <td>Timeline</td>
+                                    <td>Summary of productivity</td>
+                                </tr>
+                            </table> 
+                        </nav>
+            </div>
+            <div class="footer">FOOTER</div>
+        </div>
     </body>
 </html>
