--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="basic.css">
     </head>
     <body>
