--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     </head>
     <body>
         <div class="container">
-            <div class="header">
-                    <table>
-                            <tr>
-                                <td style = "width: 5%">Personal information</td>
-                                <td style = "width: 5%">Additional informaton</td>
-                                <td style = "width: 65%; text-align: center">Name of site</td>
-                                <td style = "width: 5%">Additional</td>
-                            </tr>
-                        </table>
-            </div>
+            <header>
+                <table>
+                    <tr>
+                        <td style = "width: 5%">Personal information</td>
+                        <td style = "width: 5%">Additional informaton</td>
+                        <td style = "width: 65%; text-align: center">Name of site</td>
+                        <td style = "width: 5%">Additional</td>
+                    </tr>
+                </table>
+            </header>
             <div class="menu">
                     <table class = "information information-table">
                             <caption>Bla-bla-bla</caption>
