--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
                     </tr>
                 </table>
             </header>
-            <div class="menu">
-                    <table class = "information information-table">
-                            <caption>Bla-bla-bla</caption>
-                            <tr>
-                                <td>Information</td>
-                            </tr>
-                            <tr>
-                                <td>Information</td>
-                            </tr>
-                            <tr>
-                                <td>Information</td>
-                            </tr>
-                            <tr>
-                                <td>Information</td>
-                            </tr>
-                            <tr>
-                                <td>Information</td>
-                            </tr>
-                        </table>
-            </div>
+            <aside>
+                <table class = "information information-table">
+                    <caption>Bla-bla-bla</caption>
+                    <tr>
+                        <td>Information</td>
+                    </tr>
+                    <tr>
+                        <td>Information</td>
+                    </tr>
+                    <tr>
+                        <td>Information</td>
+                    </tr>
+                    <tr>
+                        <td>Information</td>
+                    </tr>
+                    <tr>
+                        <td>Information</td>
+                    </tr>
+                </table>
+            </aside>
             <div class="content">
                     <nav class = "table">
                             <table>
@@ -72,7 +72,7 @@
                             </table> 
                         </nav>
             </div>
-            <div class="footer">FOOTER</div>
+            <footer>FOOTER</footer>
         </div>
     </body>
 </html>
