--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     </tr>
                 </table>
             </header>
+            
             <aside>
                 <table class = "information information-table">
                     <caption>Bla-bla-bla</caption>
@@ -35,8 +36,9 @@
                     </tr>
                 </table>
             </aside>
-            <div class="content">
-                    <nav class = "table">
+
+            <article>
+                    <nav>
                             <table>
                                 <caption>Name of project</caption>
                                 <tr>
@@ -71,8 +73,18 @@
                                 </tr>
                             </table> 
                         </nav>
-            </div>
-            <footer>FOOTER</footer>
+            </article>
+
+            <footer>
+                <table>
+                    <tr>
+                            <td style = "width: 5%">Informaton</td>
+                            <td style = "width: 5%">Informaton</td>
+                            <td style = "width: 65%">Informaton</td>
+                            <td style = "width: 5%">Informaton</td>
+                    </tr>
+                </table>
+            </footer>
         </div>
     </body>
 </html>
