--- a/index.html
+++ b/index.html
@@ -6,75 +6,31 @@
     <body>
         <div class="container">
             <header>
-                <table>
-                    <tr>
-                        <td style = "width: 5%">Personal information</td>
-                        <td style = "width: 5%">Additional  informaton</td>
-                        <td style = "width: 65%; text-align: center">Name of site</td>
-                        <td style = "width: 5%">Additional</td>
-                    </tr>
-                </table>
+                <div>TimeFriend</div>
+            </table>
             </header>
 
             <aside>
-                <table class = "information information-table">
-                    <caption>Bla-bla-bla</caption>
-                    <tr>
-                        <td>Information</td>
-                    </tr>
-                    <tr>
-                        <td>Information</td>
-                    </tr>
-                    <tr>
-                        <td>Information</td>
-                    </tr>
-                    <tr>
-                        <td>Information</td>
-                    </tr>
-                    <tr>
-                        <td>Information</td>
-                    </tr>
-                </table>
+                Project name
             </aside>
 
             <article>
-                    <nav>
-                            <table>
-                                <caption>Name of project</caption>
-                                <tr>
-                                    <td>First step  in the project</td>
-                                    <td>Small  description</td>
-                                    <td>Timeline</td>
-                                    <td>Summary of productivity</td>
-                                </tr>
-                                <tr>
-                                    <td>Second step in the project</td>
-                                    <td>Small description</td>
-                                    <td>Timeline</td>
-                                    <td>Summary of productivity</td>
-                                </tr>
-                                <tr>
-                                    <td>Third step in the project</td>
-                                    <td>Small description</td>
-                                    <td>Timeline</td>
-                                    <td>Summary of productivity</td>
-                                </tr>
-                                <tr>
-                                    <td>Forth step in the project</td>
-                                    <td>Small description</td>
-                                    <td>Timeline</td>
-                                    <td>Summary of productivity</td>
-                                </tr>
-                                <tr>
-                                    <td>Fifth step in the project</td>
-                                    <td>Small description</td>
-                                    <td>Timeline</td>
-                                    <td>Summary of productivity</td>
-                                </tr>
-                            </table> 
-                        </nav>
+                    <div class = "projectStep">First project</div>
+                    <div class = "time">time</div>
+                    <div class = "projectStep">Second project</div>
+                    <div class = "time">time</div>
+                    <div class = "projectStep">Third project</div>
+                    <div class = "time">time</div>
+                    <div class = "projectStep">Forth project</div>
+                    <div class = "time">time</div>
             </article>
 
+            <nav>
+                <div class = "timeNumber"></div>
+                <div class = "timeNumber"></div>
+                <div class = "timeNumber"></div>
+                <div class = "timeNumber"></div>
+            </nav>
             <footer>
                 <table>
                     <tr>
