--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <div class="container">
             <header>
                 <div>TimeFriend</div>
-            </table>
             </header>
 
             <aside>
-                Project name
+                <div class = "caption">
+                    <div>Project name</div>
+                    <div class = "captionTime">time</div>
+                </div>
             </aside>
 
             <article>
