--- a/index.html
+++ b/index.html
@@ -17,21 +17,38 @@
             </aside>
 
             <article>
-                    <div class = "projectStep">First project</div>
-                    <div class = "time">time</div>
-                    <div class = "projectStep">Second project</div>
-                    <div class = "time">time</div>
-                    <div class = "projectStep">Third project</div>
-                    <div class = "time">time</div>
-                    <div class = "projectStep">Forth project</div>
-                    <div class = "time">time</div>
-            </article>
+                    <div class = "timeBlock">
+                        <div class = "projectStep">First step</div>
+                        <div class = "time"></div>
+                    </div>
+                    
+                    <div class = "timeBlock">
+                        <div class = "projectStep">Second step</div>
+                        <div class = "time"></div>
+                    </div>
+
+                    <div class = "timeBlock">
+                        <div class = "projectStep">Third step</div>
+                        <div class = "time"></div>
+                    </div>
+
+                    <div class = "timeBlock">
+                        <div class = "projectStep">Forth step</div>
+                        <div class = "time"></div>
+                    </div>
+
+                    <div class = "timeBlock">
+                        <div class = "projectStep">Finish step</div>
+                        <div class = "time"></div>
+                    </div>
+              </article>
 
             <nav>
-                <div class = "timeNumber"></div>
-                <div class = "timeNumber"></div>
-                <div class = "timeNumber"></div>
-                <div class = "timeNumber"></div>
+                <div class = "timeNumber">00:00:00</div>
+                <div class = "timeNumber">00:00:00</div>
+                <div class = "timeNumber">00:00:00</div>
+                <div class = "timeNumber">00:00:00</div>
+                <div class = "timeNumber">00:00:00</div>
             </nav>
             <footer>
                 <table>
@@ -43,6 +60,7 @@
                     </tr>
                 </table>
             </footer>
-        </div>
+         </div>
+
     </body>
 </html>
