--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class = "task">
                         <div class = "task--description">
                             <div class = "task--name">First step</div>
-                            <div class = "task--progress">s</div>
+                            <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown">
                             00:00:00
@@ -30,7 +30,7 @@
                     <div class = "task">
                         <div class = "task--description">
                             <div class = "task--name">Second step</div>
-                            <div class = "task--progress">s</div>
+                            <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown">
                             00:00:00
@@ -40,7 +40,7 @@
                     <div class = "task">
                         <div class = "task--description">
                             <div class = "task--name">Third step</div>
-                            <div class = "task--progress">s</div>
+                            <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown">
                             00:00:00
@@ -50,7 +50,7 @@
                     <div class = "task">
                         <div class = "task--description">
                             <div class = "task--name">Forth step</div>
-                            <div class = "task--progress">s</div>
+                            <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown">
                             00:00:00
@@ -60,7 +60,7 @@
                     <div class = "task">
                         <div class = "task--description">
                             <div class = "task--name">Fifth step</div>
-                            <div class = "task--progress">s</div>
+                            <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown">
                             00:00:00
