--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
             <aside>
                 <div class = "caption">
-                    <div>Project name</div>
-                    <div class = "captionTime">time</div>
+                    <div class = "caption--name">Project name</div>
+                    <div class = "caption--time">time</div>
                 </div>
             </aside>
 
