--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
                 <div>TimeFriend</div>
             </header>
 
-            <aside>
+            <section>
                 <div class = "caption">
                     <div class = "caption--name">Project name</div>
                     <div class = "caption--time">time</div>
                 </div>
-            </aside>
+            </section>
 
             <article class="board">
                     <div class = "task">
