--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </article>
 
             <footer>
-                
+                Hey
             </footer>
          </div>
 
@@ -120,6 +120,6 @@
               }
             }, 1000);
             </script>
-            
+
     </body>
 </html>
