--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <article class="board">
                     <div class = "task">
                         <div class = "task--description">
-                            <div class = "task--name">First step</div>
+                            <div class = "task--name">
+                                <p>First step</p>
+                            </div>
                             <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown">
@@ -31,7 +33,9 @@
                     
                     <div class = "task">
                         <div class = "task--description">
-                            <div class = "task--name">Second step</div>
+                            <div class = "task--name">
+                                <p>Second step</p>
+                            </div>
                             <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown">
@@ -41,7 +45,9 @@
 
                     <div class = "task">
                         <div class = "task--description">
-                            <div class = "task--name">Third step</div>
+                            <div class = "task--name">
+                                <p>Third step</p>
+                            </div>
                             <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown">
@@ -51,7 +57,9 @@
 
                     <div class = "task">
                         <div class = "task--description">
-                            <div class = "task--name">Forth step</div>
+                            <div class = "task--name">
+                                <p>Forth step</p>
+                            </div>
                             <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown">
@@ -61,7 +69,9 @@
 
                     <div class = "task">
                         <div class = "task--description">
-                            <div class = "task--name">Fifth step</div>
+                            <div class = "task--name">
+                                <p>Fifth step</p>
+                            </div>
                             <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown">
@@ -71,7 +81,9 @@
 
                     <div class = "task">
                         <div class = "task--description">
-                            <div class = "task--name">Sixth step</div>
+                            <div class = "task--name">
+                                <p>Sixth step</p>
+                            </div>
                             <div class = "task--progress"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown">
