--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <div class = "task--name">
                                 <p>First step</p>
                             </div>
-                            <div class = "task--progress"></div>
+                            <div class = "task--progress" id = "line"></div>
                         </div>
                         <div class = "task--countdown" id = "task--countdown0">
                             
